--- a/simit.html
+++ b/simit.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <title>Simit&Cay</title>
+  <link href="css/simit.css" rel="stylesheet">
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -12,9 +13,9 @@
 
 <div class="container">
   <div class="btn-group btn-group-justified">
-    <a href="#" class="btn btn-primary"><h4>Nedir</h4></a>
+    <a #simittarih href="#" class="btn btn-primary"><h4>Tarihi</h4></a>
     <a #simittitle href="#" class="btn btn-primary"><h1>SİMİT</h1></a>
-    <a href="#" class="btn btn-primary"><h4>Nasıl Yapılır?</h4></a>
+    <a #simittarif href="#" class="btn btn-primary"><h4>Tarifi</h4></a>
   </div>
 </div>
 
