İLETİŞİM BİLGİLERİ DÜZENLENDİ

--- a/ondex.html
+++ b/ondex.html
@@ -276,13 +276,14 @@
 
 <!-- Container (Contact Section) -->
 <div id="contact" class="container-fluid bg-grey">
-  <h2 class="text-center">CONTACT</h2>
+  <h2 class="text-center">İLETİŞİM</h2>
   <div class="row">
     <div class="col-sm-5">
-      <p>Contact us and we'll get back to you within 24 hours.</p>
-      <p><span class="glyphicon glyphicon-map-marker"></span> Chicago, US</p>
-      <p><span class="glyphicon glyphicon-phone"></span> +00 1515151515</p>
-      <p><span class="glyphicon glyphicon-envelope"></span> myemail@something.com</p>
+      <p>Simit hakkında sorunlarınız mı var?</p>
+      <p>Aşağıdaki bilgilerden bize ulaştığınız takdirde 24 saat içinde geri dönüş yapacağız.</p>
+      <p><span class="glyphicon glyphicon-map-marker"></span> İstanbul, Türkiye </p>
+      <p><span class="glyphicon glyphicon-phone"></span> +90 0535-405-6270</p>
+      <p><span class="glyphicon glyphicon-envelope"></span>Founder: sanemunal02@gmail.com / Co-founder: dina_polat62@icloud.com</p>
     </div>
     <div class="col-sm-7 slideanim">
       <div class="row">
