--- a/ondex.html
+++ b/ondex.html
@@ -248,10 +248,23 @@
 <div id="tarif" class="container-fluid">
   <div class="row">
     <div class="col-sm-8">
-      <h2>Simit Nasıl Yapılır?</h2><br>
-      <h4></h4><br>
-      <p></p>
-      <br><button class="btn btn-default btn-lg">Get in Touch</button>
+      <h2><strong>Simit Nasıl Yapılır?</strong></h2><br>
+      <h4><strong>Malzemeler</strong></h4><br>
+    <ul>
+      <li>1 su bardağ ılık su</li>
+      <li>1 su bardağı ılık süt</li>
+      <li>1 yemek kaşığı toz şeker</li>
+      <li>1 tatlı kaşığı süt</li>
+      <li>1 adet yumurta</li>
+      <li>1 paket instant maya</li>
+      <li>3,5 - 4 su bardağı un</li>
+    </ul>
+      <h4><strong>Üzeri için</strong></h4>
+    <ul>
+      <li>1/2 çay bardağı su</li>
+      <li>1/2 çay bardağı pekmez</li>
+      <li>1 kase susam</li>
+    </ul>
     </div>
     <div class="col-sm-4">
       <span class="glyphicon glyphicon-signal logo"></span>
