--- a/ondex.html
+++ b/ondex.html
@@ -248,7 +248,7 @@
 <div id="tarif" class="container-fluid">
   <div class="row">
     <div class="col-sm-8">
-      <h2><strong>Simit Nasıl Yapılır?</strong></h2><br>
+      <h2><strong>Tarifi</strong></h2><br>
       <h4><strong>Malzemeler</strong></h4><br>
     <ul>
       <li>1 su bardağ ılık su</li>
@@ -278,18 +278,24 @@
       <span class="glyphicon glyphicon-globe logo slideanim"></span>
     </div>
     <div class="col-sm-8">
-      <h2>Our Values</h2><br>
-      <h4><strong>MISSION:</strong> Our mission lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</h4><br>
-      <p><strong>VISION:</strong> Our vision Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-    </div>
+      <h4><strong>Püf Noktası</strong></h4><br>
+      <p>Simitlerinizi ne kadar ince rulo haline getirerek sararsanız o kadar çıtır çıtır olacaktır. Susamları hafif kavurmak kokularının ve lezzetlerinin daha çok ortaya çıkmasını sağlayacaktır. Pişirdiğiniz ve fazla gelen simitleri buzdolabı poşetine koyarak buzlukta saklayabilir. Çıkarıp 200 derecelik fırında ısıtarak afiyetle tüketebilirsiniz.</p>
+      <h4><strong>Yapılışı</strong></h4>
+    <ol>
+      <li>Derin bir kabın içerisine ılık süt, ılık su, maya ve şekeri koyun güzelce karıştırın.</li>
+      <li>Ardından içerisine yumurtayı kırın ve karıştırın. Bu karışımın içerisine azar azar un ilave edin.</li>
+      <li>Tuzu da ekleyerek güzelce yoğurun. Ele yapışmayan yumuşacık bir hamur elde edin.</li>
+      <li>Üzerini streç filmle ya da nemli bir bezle örtün ve oda sıcaklığında 1 saat kadar mayalanmaya bırakın.</li>
+      <li>Mayalandıktan sonra minik bezeler halinde ayırın. Bezelerin her birini rulo şeklinde uzatın ve ikisini birbirine örgü biçimde sarın. Ardından uçlarını birleştirin.</li>
+      <li>Suyla pekmezi karıştırarak açın. Susamları hafif kavurun soğumaya bırakın.</li>
+      <li>Hazırladığınız simitleri önce pekmezli suya ardından susama bulayın ve pişirme kağıdı serili fırın tepsisinin üzerine aktarın.</li>
+      <li>180 derecede ısıtılmış fırında üzerleri kızarana kadar ortalama 25-30 dakika kadar pişirin. Çıkarıp afiyetle tüketin.</li>
+    </ol>
   </div>
-</div>
 
-
-<!-- Container (Contact Section) -->
+  <!-- Container (Contact Section) -->
 <div id="contact" class="container-fluid bg-grey">
-  <h2 class="text-center">İLETİŞİM</h2>
+  <h2>İLETİŞİM</h2>
   <div class="row">
     <div class="col-sm-5">
       <p>Simit hakkında sorunlarınız mı var?</p>
