--- a/ondex.html
+++ b/ondex.html
@@ -221,8 +221,8 @@
   <div class="row">
     <div class="col-sm-8">
       <h2><center>Simit Nedir?<center></h2><br>
-      <h4>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</h4><br>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+      <h3>Simit veya Gevrek, susamla kaplı yuvarlak biçimli ekmeklere verilen genel addır. Türkiye ve Yunanistan'da yaygın olarak tüketilen simide Yunanistan'da kuluri adı verilir. Kültürlere göre değişkenlik gösterse de simitin gevrek olması tercih edilir. İzmir'de simit gevrek adıyla da bilinir.(Bulgaristan'da "gevrek", Sırbistan'da "çevrek" ve Romanya'da da "covrigi" denir. Muhtemelen Balkanlar'dan İzmir'e gelen göçmenlerin etkisiyle simite "gevrek" denmiştir...)</h3><br>
+      <p>İstanbul'a gelen ya da İstanbul'dan doğuya giden kervanların konaklama alanı olarak bilinen İzmit'te yolculara pratik bir yiyecek olarak hazırlanan simit, bu özelliği ile de ilk fast food örneklerinden sayılabilir. Kervanlarda yolculuk yapanların atıştırmalık olarak yanlarına aldıkları simitleri, yol boyunca karşılaştıkları kişilere "Simitçi'den" aldıklarını söyledikleri için, bu halka şeklindeki yiyeceğin adı simit olarak kaldı.</p>
     </div>
     <div class="col-sm-4">
       <span class="glyphicon glyphicon-signal logo"></span>
@@ -237,9 +237,8 @@
     </div>
     <div class="col-sm-8">
       <h2>Our Values</h2><br>
-      <h4><strong>MISSION:</strong> Our mission lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</h4><br>
-      <p><strong>VISION:</strong> Our vision Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+      <h4>Türk mutfağında sık sık tüketilen dışı susamla kaplı ve çıtır; içi ise türüne göre yumuşak yada sert olabilen bir atıştırmalıktır. Çahvaltılarda çay ve peynirle çok yakışır. Ayrıca başta Kadıköy olmak üzere bir çok yerde seyyar simitçiler de vardır. </h4><br>
+      <p><strong></strong></p>
     </div>
   </div>
 </div>
