--- a/ondex.html
+++ b/ondex.html
@@ -5,9 +5,9 @@
   <title>Bootstrap Theme Company Page</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="../css/simit.css" rel="stylesheet">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet" type="text/css">
-  <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet" type="text/css">
+  <link href="https://fonts.googleapis.com/css?family=Gabriela" rel="stylesheet" type="text/css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <style>
@@ -188,6 +188,11 @@
         font-size: 150px;
     }
   }
+
+    h1 {
+         font-family: 'Gabriela', serif;
+         font-size: 32px;
+       }
   </style>
 </head>
 <body id="myPage" data-spy="scroll" data-target=".navbar" data-offset="60">
@@ -219,34 +224,24 @@
 <!-- Container (About Section) -->
 <div id="tarih" class="container-fluid">
   <div class="row">
-    <div class="col-sm-8">
+    <div class="col-sm-6">
       <h2><center>Simit Nedir?<center></h2><br>
       <h3>Simit veya Gevrek, susamla kaplı yuvarlak biçimli ekmeklere verilen genel addır. Türkiye ve Yunanistan'da yaygın olarak tüketilen simide Yunanistan'da kuluri adı verilir. Kültürlere göre değişkenlik gösterse de simitin gevrek olması tercih edilir. İzmir'de simit gevrek adıyla da bilinir.(Bulgaristan'da "gevrek", Sırbistan'da "çevrek" ve Romanya'da da "covrigi" denir. Muhtemelen Balkanlar'dan İzmir'e gelen göçmenlerin etkisiyle simite "gevrek" denmiştir...)</h3><br>
-      <p>İstanbul'a gelen ya da İstanbul'dan doğuya giden kervanların konaklama alanı olarak bilinen İzmit'te yolculara pratik bir yiyecek olarak hazırlanan simit, bu özelliği ile de ilk fast food örneklerinden sayılabilir. Kervanlarda yolculuk yapanların atıştırmalık olarak yanlarına aldıkları simitleri, yol boyunca karşılaştıkları kişilere "Simitçi'den" aldıklarını söyledikleri için, bu halka şeklindeki yiyeceğin adı simit olarak kaldı.</p>
+      <p><h4>İstanbul'a gelen ya da İstanbul'dan doğuya giden kervanların konaklama alanı olarak bilinen İzmit'te yolculara pratik bir yiyecek olarak hazırlanan simit, bu özelliği ile de ilk fast food örneklerinden sayılabilir. Kervanlarda yolculuk yapanların atıştırmalık olarak yanlarına aldıkları simitleri, yol boyunca karşılaştıkları kişilere "Simitçi'den" aldıklarını söyledikleri için, bu halka şeklindeki yiyeceğin adı simit olarak kaldı.</h4></p>
+      <h2>Ayrıca...</h2><br>
+      <h4>Türk mutfağında sık sık tüketilen dışı susamla kaplı ve çıtır; içi ise türüne göre yumuşak yada sert olabilen bir atıştırmalıktır. Çahvaltılarda çay ve peynirle çok yakışır. Ayrıca başta Kadıköy olmak üzere bir çok yerde seyyar simitçiler de vardır. </h4><br>
     </div>
-    <div class="col-sm-4">
-      <span class="glyphicon glyphicon-signal logo"></span>
+    <div class="col-sm-6">
+      <img src="simit.jpg" alt="simit">
     </div>
   </div>
 </div>
 
-<div class="container-fluid bg-grey">
-  <div class="row">
-    <div class="col-sm-4">
-      <span class="glyphicon glyphicon-globe logo slideanim"></span>
-    </div>
-    <div class="col-sm-8">
-      <h2>Our Values</h2><br>
-      <h4>Türk mutfağında sık sık tüketilen dışı susamla kaplı ve çıtır; içi ise türüne göre yumuşak yada sert olabilen bir atıştırmalıktır. Çahvaltılarda çay ve peynirle çok yakışır. Ayrıca başta Kadıköy olmak üzere bir çok yerde seyyar simitçiler de vardır. </h4><br>
-      <p><strong></strong></p>
-    </div>
-  </div>
-</div>
 
 <!-- Container (About Section) -->
 <div id="tarif" class="container-fluid">
   <div class="row">
-    <div class="col-sm-8">
+    <div class="col-sm-4">
       <h2><strong>Tarifi</strong></h2><br>
       <h4><strong>Malzemeler</strong></h4><br>
     <ul>
@@ -265,18 +260,18 @@
       <li>1 kase susam</li>
     </ul>
     </div>
-    <div class="col-sm-4">
-      <span class="glyphicon glyphicon-signal logo"></span>
+    <div class="col-sm-8">
+      <img src="simit-cay.jpg" alt="simit">
     </div>
   </div>
 </div>
 
 <div class="container-fluid bg-grey">
   <div class="row">
-    <div class="col-sm-4">
-      <span class="glyphicon glyphicon-globe logo slideanim"></span>
+    <div class="col-sm-5">
+      <img src="https://cdn.vox-cdn.com/uploads/chorus_image/image/49650575/Simit_at_Galata_Simitcisi.0.0.jpg" alt="simit" style="width:600px;height:400px;" >
     </div>
-    <div class="col-sm-8">
+    <div class="col-sm-7">
       <h4><strong>Püf Noktası</strong></h4><br>
       <p>Simitlerinizi ne kadar ince rulo haline getirerek sararsanız o kadar çıtır çıtır olacaktır. Susamları hafif kavurmak kokularının ve lezzetlerinin daha çok ortaya çıkmasını sağlayacaktır. Pişirdiğiniz ve fazla gelen simitleri buzdolabı poşetine koyarak buzlukta saklayabilir. Çıkarıp 200 derecelik fırında ısıtarak afiyetle tüketebilirsiniz.</p>
       <h4><strong>Yapılışı</strong></h4>
