--- a/ondex.html
+++ b/ondex.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <!-- Theme Made By www.w3schools.com - No Copyright -->
-  <title>Bootstrap Theme Company Page</title>
+  <title>Sanem&Dina</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="../css/simit.css" rel="stylesheet">
@@ -12,7 +12,7 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <style>
   body {
-      font: 400 15px Lato, sans-serif;
+      font: 400 15px Gabriela, sans-serif;
       line-height: 1.8;
       color: #818181;
   }
@@ -30,8 +30,15 @@
       font-weight: 400;
       margin-bottom: 30px;
   }
+  #contact1 {
+    border: 3px;
+    border-style: solid;
+    border-color: 	#FFA07A;
+    background-color:#FFA07A;
+
+ }
   .jumbotron {
-      background-color: #f4511e;
+      background-color:	#FFA07A;
       color: #fff;
       padding: 100px 25px;
       font-family: Montserrat, sans-serif;
@@ -120,7 +127,7 @@
   }
   .navbar {
       margin-bottom: 0;
-      background-color: #f4511e;
+      background-color:	#FFA07A;
       z-index: 9999;
       border: 0;
       font-size: 12px !important;
@@ -190,7 +197,7 @@
   }
 
     h1 {
-         font-family: 'Gabriela', serif;
+         font-family: Gabriela;
          font-size: 32px;
        }
   </style>
@@ -211,7 +218,7 @@
       <ul class="nav navbar-nav navbar-right">
         <li><a href="#tarih">NEDİR?</a></li>
         <li><a href="#tarif">TARİFİ</a></li>
-        <li><a href="#contact">İLETİŞİM</a></li>
+        <li><a href="#contact1">İLETİŞİM</a></li>
       </ul>
     </div>
   </div>
@@ -226,13 +233,13 @@
   <div class="row">
     <div class="col-sm-6">
       <h2><center>Simit Nedir?<center></h2><br>
-      <h3>Simit veya Gevrek, susamla kaplı yuvarlak biçimli ekmeklere verilen genel addır. Türkiye ve Yunanistan'da yaygın olarak tüketilen simide Yunanistan'da kuluri adı verilir. Kültürlere göre değişkenlik gösterse de simitin gevrek olması tercih edilir. İzmir'de simit gevrek adıyla da bilinir.(Bulgaristan'da "gevrek", Sırbistan'da "çevrek" ve Romanya'da da "covrigi" denir. Muhtemelen Balkanlar'dan İzmir'e gelen göçmenlerin etkisiyle simite "gevrek" denmiştir...)</h3><br>
+      <h4><strong>Simit veya Gevrek, susamla kaplı yuvarlak biçimli ekmeklere verilen genel addır. Türkiye ve Yunanistan'da yaygın olarak tüketilen simide Yunanistan'da kuluri adı verilir. Kültürlere göre değişkenlik gösterse de simitin gevrek olması tercih edilir. İzmir'de simit gevrek adıyla da bilinir.(Bulgaristan'da "gevrek", Sırbistan'da "çevrek" ve Romanya'da da "covrigi" denir. Muhtemelen Balkanlar'dan İzmir'e gelen göçmenlerin etkisiyle simite "gevrek" denmiştir...)</strong><br>
       <p><h4>İstanbul'a gelen ya da İstanbul'dan doğuya giden kervanların konaklama alanı olarak bilinen İzmit'te yolculara pratik bir yiyecek olarak hazırlanan simit, bu özelliği ile de ilk fast food örneklerinden sayılabilir. Kervanlarda yolculuk yapanların atıştırmalık olarak yanlarına aldıkları simitleri, yol boyunca karşılaştıkları kişilere "Simitçi'den" aldıklarını söyledikleri için, bu halka şeklindeki yiyeceğin adı simit olarak kaldı.</h4></p>
       <h2>Ayrıca...</h2><br>
       <h4>Türk mutfağında sık sık tüketilen dışı susamla kaplı ve çıtır; içi ise türüne göre yumuşak yada sert olabilen bir atıştırmalıktır. Çahvaltılarda çay ve peynirle çok yakışır. Ayrıca başta Kadıköy olmak üzere bir çok yerde seyyar simitçiler de vardır. </h4><br>
     </div>
     <div class="col-sm-6">
-      <img src="simit.jpg" alt="simit">
+      <img src="simit.jpg" alt="simit" style="width:600px;height:400px" >
     </div>
   </div>
 </div>
@@ -269,7 +276,7 @@
 <div class="container-fluid bg-grey">
   <div class="row">
     <div class="col-sm-5">
-      <img src="https://cdn.vox-cdn.com/uploads/chorus_image/image/49650575/Simit_at_Galata_Simitcisi.0.0.jpg" alt="simit" style="width:600px;height:400px;" >
+     <img src="https://cdn.vox-cdn.com/uploads/chorus_image/image/49650575/Simit_at_Galata_Simitcisi.0.0.jpg" alt="simit" style="width:600px;height:400px;" >
     </div>
     <div class="col-sm-7">
       <h4><strong>Püf Noktası</strong></h4><br>
@@ -286,9 +293,11 @@
       <li>180 derecede ısıtılmış fırında üzerleri kızarana kadar ortalama 25-30 dakika kadar pişirin. Çıkarıp afiyetle tüketin.</li>
     </ol>
   </div>
+</div>
+</div>
 
   <!-- Container (Contact Section) -->
-<div id="contact" class="container-fluid bg-grey">
+<div id="contact1" class="container-fluid bg-grey">
   <h2>İLETİŞİM</h2>
   <div class="row">
     <div class="col-sm-5">
