--- a/index.html
+++ b/index.html
@@ -2,17 +2,17 @@
 <html lang="en">
 <head>
   <!-- Theme Made By www.w3schools.com - No Copyright -->
-  <title>Bootstrap Theme Company Page</title>
+  <title>Sanem&Dina</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="../css/simit.css" rel="stylesheet">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet" type="text/css">
-  <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet" type="text/css">
+  <link href="https://fonts.googleapis.com/css?family=Gabriela" rel="stylesheet" type="text/css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <style>
   body {
-      font: 400 15px Lato, sans-serif;
+      font: 400 15px Gabriela, sans-serif;
       line-height: 1.8;
       color: #818181;
   }
@@ -30,8 +30,15 @@
       font-weight: 400;
       margin-bottom: 30px;
   }
+  #contact1 {
+    border: 3px;
+    border-style: solid;
+    border-color: 	#FFA07A;
+    background-color:#FFA07A;
+
+ }
   .jumbotron {
-      background-color: #f4511e;
+      background-color:	#FFA07A;
       color: #fff;
       padding: 100px 25px;
       font-family: Montserrat, sans-serif;
@@ -120,7 +127,7 @@
   }
   .navbar {
       margin-bottom: 0;
-      background-color: #f4511e;
+      background-color:	#FFA07A;
       z-index: 9999;
       border: 0;
       font-size: 12px !important;
@@ -188,6 +195,11 @@
         font-size: 150px;
     }
   }
+
+    h1 {
+         font-family: Gabriela;
+         font-size: 32px;
+       }
   </style>
 </head>
 <body id="myPage" data-spy="scroll" data-target=".navbar" data-offset="60">
@@ -200,242 +212,100 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#myPage">Logo</a>
+      <a class="navbar-brand" href="#myPage"></a>
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#about">ABOUT</a></li>
-        <li><a href="#services">SERVICES</a></li>
-        <li><a href="#portfolio">PORTFOLIO</a></li>
-        <li><a href="#pricing">PRICING</a></li>
-        <li><a href="#contact">CONTACT</a></li>
+        <li><a href="#tarih">NEDİR?</a></li>
+        <li><a href="#tarif">TARİFİ</a></li>
+        <li><a href="#contact1">İLETİŞİM</a></li>
       </ul>
     </div>
   </div>
 </nav>
 
 <div class="jumbotron text-center">
-  <h1>Company</h1>
-  <p>We specialize in blablabla</p>
-  <form>
-    <div class="input-group">
-      <input type="email" class="form-control" size="50" placeholder="Email Address" required>
-      <div class="input-group-btn">
-        <button type="button" class="btn btn-danger">Subscribe</button>
-      </div>
-    </div>
-  </form>
+  <h1>SİMİT</h1>
 </div>
 
 <!-- Container (About Section) -->
-<div id="about" class="container-fluid">
+<div id="tarih" class="container-fluid">
   <div class="row">
-    <div class="col-sm-8">
-      <h2>About Company Page</h2><br>
-      <h4>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</h4><br>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-      <br><button class="btn btn-default btn-lg">Get in Touch</button>
+    <div class="col-sm-6">
+      <h2><center>Simit Nedir?<center></h2><br>
+      <h4><strong>Simit veya Gevrek, susamla kaplı yuvarlak biçimli ekmeklere verilen genel addır. Türkiye ve Yunanistan'da yaygın olarak tüketilen simide Yunanistan'da kuluri adı verilir. Kültürlere göre değişkenlik gösterse de simitin gevrek olması tercih edilir. İzmir'de simit gevrek adıyla da bilinir.(Bulgaristan'da "gevrek", Sırbistan'da "çevrek" ve Romanya'da da "covrigi" denir. Muhtemelen Balkanlar'dan İzmir'e gelen göçmenlerin etkisiyle simite "gevrek" denmiştir...)</strong><br>
+      <p><h4>İstanbul'a gelen ya da İstanbul'dan doğuya giden kervanların konaklama alanı olarak bilinen İzmit'te yolculara pratik bir yiyecek olarak hazırlanan simit, bu özelliği ile de ilk fast food örneklerinden sayılabilir. Kervanlarda yolculuk yapanların atıştırmalık olarak yanlarına aldıkları simitleri, yol boyunca karşılaştıkları kişilere "Simitçi'den" aldıklarını söyledikleri için, bu halka şeklindeki yiyeceğin adı simit olarak kaldı.</h4></p>
+      <h2>Ayrıca...</h2><br>
+      <h4>Türk mutfağında sık sık tüketilen dışı susamla kaplı ve çıtır; içi ise türüne göre yumuşak yada sert olabilen bir atıştırmalıktır. Çahvaltılarda çay ve peynirle çok yakışır. Ayrıca başta Kadıköy olmak üzere bir çok yerde seyyar simitçiler de vardır. </h4><br>
     </div>
+    <div class="col-sm-6">
+      <img src="simit.jpg" alt="simit" style="width:600px;height:400px" >
+    </div>
+  </div>
+</div>
+
+
+<!-- Container (About Section) -->
+<div id="tarif" class="container-fluid">
+  <div class="row">
     <div class="col-sm-4">
-      <span class="glyphicon glyphicon-signal logo"></span>
+      <h2><strong>Tarifi</strong></h2><br>
+      <h4><strong>Malzemeler</strong></h4><br>
+    <ul>
+      <li>1 su bardağ ılık su</li>
+      <li>1 su bardağı ılık süt</li>
+      <li>1 yemek kaşığı toz şeker</li>
+      <li>1 tatlı kaşığı süt</li>
+      <li>1 adet yumurta</li>
+      <li>1 paket instant maya</li>
+      <li>3,5 - 4 su bardağı un</li>
+    </ul>
+      <h4><strong>Üzeri için</strong></h4>
+    <ul>
+      <li>1/2 çay bardağı su</li>
+      <li>1/2 çay bardağı pekmez</li>
+      <li>1 kase susam</li>
+    </ul>
+    </div>
+    <div class="col-sm-8">
+      <img src="simit-cay.jpg" alt="simit">
     </div>
   </div>
 </div>
 
 <div class="container-fluid bg-grey">
   <div class="row">
-    <div class="col-sm-4">
-      <span class="glyphicon glyphicon-globe logo slideanim"></span>
+    <div class="col-sm-5">
+     <img src="https://cdn.vox-cdn.com/uploads/chorus_image/image/49650575/Simit_at_Galata_Simitcisi.0.0.jpg" alt="simit" style="width:600px;height:400px;" >
     </div>
-    <div class="col-sm-8">
-      <h2>Our Values</h2><br>
-      <h4><strong>MISSION:</strong> Our mission lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</h4><br>
-      <p><strong>VISION:</strong> Our vision Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-    </div>
-  </div>
-</div>
-
-<!-- Container (Services Section) -->
-<div id="services" class="container-fluid text-center">
-  <h2>SERVICES</h2>
-  <h4>What we offer</h4>
-  <br>
-  <div class="row slideanim">
-    <div class="col-sm-4">
-      <span class="glyphicon glyphicon-off logo-small"></span>
-      <h4>POWER</h4>
-      <p>Lorem ipsum dolor sit amet..</p>
-    </div>
-    <div class="col-sm-4">
-      <span class="glyphicon glyphicon-heart logo-small"></span>
-      <h4>LOVE</h4>
-      <p>Lorem ipsum dolor sit amet..</p>
-    </div>
-    <div class="col-sm-4">
-      <span class="glyphicon glyphicon-lock logo-small"></span>
-      <h4>JOB DONE</h4>
-      <p>Lorem ipsum dolor sit amet..</p>
-    </div>
-  </div>
-  <br><br>
-  <div class="row slideanim">
-    <div class="col-sm-4">
-      <span class="glyphicon glyphicon-leaf logo-small"></span>
-      <h4>GREEN</h4>
-      <p>Lorem ipsum dolor sit amet..</p>
-    </div>
-    <div class="col-sm-4">
-      <span class="glyphicon glyphicon-certificate logo-small"></span>
-      <h4>CERTIFIED</h4>
-      <p>Lorem ipsum dolor sit amet..</p>
-    </div>
-    <div class="col-sm-4">
-      <span class="glyphicon glyphicon-wrench logo-small"></span>
-      <h4 style="color:#303030;">HARD WORK</h4>
-      <p>Lorem ipsum dolor sit amet..</p>
-    </div>
-  </div>
-</div>
-
-<!-- Container (Portfolio Section) -->
-<div id="portfolio" class="container-fluid text-center bg-grey">
-  <h2>Portfolio</h2><br>
-  <h4>What we have created</h4>
-  <div class="row text-center slideanim">
-    <div class="col-sm-4">
-      <div class="thumbnail">
-        <img src="paris.jpg" alt="Paris" width="400" height="300">
-        <p><strong>Paris</strong></p>
-        <p>Yes, we built Paris</p>
-      </div>
-    </div>
-    <div class="col-sm-4">
-      <div class="thumbnail">
-        <img src="newyork.jpg" alt="New York" width="400" height="300">
-        <p><strong>New York</strong></p>
-        <p>We built New York</p>
-      </div>
-    </div>
-    <div class="col-sm-4">
-      <div class="thumbnail">
-        <img src="sanfran.jpg" alt="San Francisco" width="400" height="300">
-        <p><strong>San Francisco</strong></p>
-        <p>Yes, San Fran is ours</p>
-      </div>
-    </div>
-  </div><br>
-
-  <h2>What our customers say</h2>
-  <div id="myCarousel" class="carousel slide text-center" data-ride="carousel">
-    <!-- Indicators -->
-    <ol class="carousel-indicators">
-      <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-      <li data-target="#myCarousel" data-slide-to="1"></li>
-      <li data-target="#myCarousel" data-slide-to="2"></li>
+    <div class="col-sm-7">
+      <h4><strong>Püf Noktası</strong></h4><br>
+      <p>Simitlerinizi ne kadar ince rulo haline getirerek sararsanız o kadar çıtır çıtır olacaktır. Susamları hafif kavurmak kokularının ve lezzetlerinin daha çok ortaya çıkmasını sağlayacaktır. Pişirdiğiniz ve fazla gelen simitleri buzdolabı poşetine koyarak buzlukta saklayabilir. Çıkarıp 200 derecelik fırında ısıtarak afiyetle tüketebilirsiniz.</p>
+      <h4><strong>Yapılışı</strong></h4>
+    <ol>
+      <li>Derin bir kabın içerisine ılık süt, ılık su, maya ve şekeri koyun güzelce karıştırın.</li>
+      <li>Ardından içerisine yumurtayı kırın ve karıştırın. Bu karışımın içerisine azar azar un ilave edin.</li>
+      <li>Tuzu da ekleyerek güzelce yoğurun. Ele yapışmayan yumuşacık bir hamur elde edin.</li>
+      <li>Üzerini streç filmle ya da nemli bir bezle örtün ve oda sıcaklığında 1 saat kadar mayalanmaya bırakın.</li>
+      <li>Mayalandıktan sonra minik bezeler halinde ayırın. Bezelerin her birini rulo şeklinde uzatın ve ikisini birbirine örgü biçimde sarın. Ardından uçlarını birleştirin.</li>
+      <li>Suyla pekmezi karıştırarak açın. Susamları hafif kavurun soğumaya bırakın.</li>
+      <li>Hazırladığınız simitleri önce pekmezli suya ardından susama bulayın ve pişirme kağıdı serili fırın tepsisinin üzerine aktarın.</li>
+      <li>180 derecede ısıtılmış fırında üzerleri kızarana kadar ortalama 25-30 dakika kadar pişirin. Çıkarıp afiyetle tüketin.</li>
     </ol>
-
-    <!-- Wrapper for slides -->
-    <div class="carousel-inner" role="listbox">
-      <div class="item active">
-        <h4>"This company is the best. I am so happy with the result!"<br><span>Michael Roe, Vice President, Comment Box</span></h4>
-      </div>
-      <div class="item">
-        <h4>"One word... WOW!!"<br><span>John Doe, Salesman, Rep Inc</span></h4>
-      </div>
-      <div class="item">
-        <h4>"Could I... BE any more happy with this company?"<br><span>Chandler Bing, Actor, FriendsAlot</span></h4>
-      </div>
-    </div>
-
-    <!-- Left and right controls -->
-    <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-      <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-      <span class="sr-only">Previous</span>
-    </a>
-    <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-      <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-      <span class="sr-only">Next</span>
-    </a>
   </div>
 </div>
-
-<!-- Container (Pricing Section) -->
-<div id="pricing" class="container-fluid">
-  <div class="text-center">
-    <h2>Pricing</h2>
-    <h4>Choose a payment plan that works for you</h4>
-  </div>
-  <div class="row slideanim">
-    <div class="col-sm-4 col-xs-12">
-      <div class="panel panel-default text-center">
-        <div class="panel-heading">
-          <h1>Basic</h1>
-        </div>
-        <div class="panel-body">
-          <p><strong>20</strong> Lorem</p>
-          <p><strong>15</strong> Ipsum</p>
-          <p><strong>5</strong> Dolor</p>
-          <p><strong>2</strong> Sit</p>
-          <p><strong>Endless</strong> Amet</p>
-        </div>
-        <div class="panel-footer">
-          <h3>$19</h3>
-          <h4>per month</h4>
-          <button class="btn btn-lg">Sign Up</button>
-        </div>
-      </div>
-    </div>
-    <div class="col-sm-4 col-xs-12">
-      <div class="panel panel-default text-center">
-        <div class="panel-heading">
-          <h1>Pro</h1>
-        </div>
-        <div class="panel-body">
-          <p><strong>50</strong> Lorem</p>
-          <p><strong>25</strong> Ipsum</p>
-          <p><strong>10</strong> Dolor</p>
-          <p><strong>5</strong> Sit</p>
-          <p><strong>Endless</strong> Amet</p>
-        </div>
-        <div class="panel-footer">
-          <h3>$29</h3>
-          <h4>per month</h4>
-          <button class="btn btn-lg">Sign Up</button>
-        </div>
-      </div>
-    </div>
-    <div class="col-sm-4 col-xs-12">
-      <div class="panel panel-default text-center">
-        <div class="panel-heading">
-          <h1>Premium</h1>
-        </div>
-        <div class="panel-body">
-          <p><strong>100</strong> Lorem</p>
-          <p><strong>50</strong> Ipsum</p>
-          <p><strong>25</strong> Dolor</p>
-          <p><strong>10</strong> Sit</p>
-          <p><strong>Endless</strong> Amet</p>
-        </div>
-        <div class="panel-footer">
-          <h3>$49</h3>
-          <h4>per month</h4>
-          <button class="btn btn-lg">Sign Up</button>
-        </div>
-      </div>
-    </div>
-  </div>
 </div>
 
-<!-- Container (Contact Section) -->
-<div id="contact" class="container-fluid bg-grey">
-  <h2 class="text-center">CONTACT</h2>
+  <!-- Container (Contact Section) -->
+<div id="contact1" class="container-fluid bg-grey">
+  <h2>İLETİŞİM</h2>
   <div class="row">
     <div class="col-sm-5">
-      <p>Contact us and we'll get back to you within 24 hours.</p>
-      <p><span class="glyphicon glyphicon-map-marker"></span> Chicago, US</p>
-      <p><span class="glyphicon glyphicon-phone"></span> +00 1515151515</p>
-      <p><span class="glyphicon glyphicon-envelope"></span> myemail@something.com</p>
+      <p>Simit hakkında sorunlarınız mı var?</p>
+      <p>Aşağıdaki bilgilerden bize ulaştığınız takdirde 24 saat içinde geri dönüş yapacağız.</p>
+      <p><span class="glyphicon glyphicon-map-marker"></span> İstanbul, Türkiye </p>
+      <p><span class="glyphicon glyphicon-phone"></span> +90 0535-405-6270</p>
+      <p><span class="glyphicon glyphicon-envelope"></span>Founder: sanemunal02@gmail.com / Co-founder: dina_polat62@icloud.com</p>
     </div>
     <div class="col-sm-7 slideanim">
       <div class="row">
@@ -456,66 +326,6 @@
   </div>
 </div>
 
-<!-- Add Google Maps -->
-<div id="googleMap" style="height:400px;width:100%;"></div>
-<script>
-function myMap() {
-var myCenter = new google.maps.LatLng(41.878114, -87.629798);
-var mapProp = {center:myCenter, zoom:12, scrollwheel:false, draggable:false, mapTypeId:google.maps.MapTypeId.ROADMAP};
-var map = new google.maps.Map(document.getElementById("googleMap"),mapProp);
-var marker = new google.maps.Marker({position:myCenter});
-marker.setMap(map);
-}
-</script>
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBu-916DdpKAjTmJNIgngS6HL_kDIKU0aU&callback=myMap"></script>
-<!--
-To use this code on your website, get a free API key from Google.
-Read more at: https://www.w3schools.com/graphics/google_maps_basic.asp
--->
-
-<footer class="container-fluid text-center">
-  <a href="#myPage" title="To Top">
-    <span class="glyphicon glyphicon-chevron-up"></span>
-  </a>
-  <p>Bootstrap Theme Made By <a href="https://www.w3schools.com" title="Visit w3schools">www.w3schools.com</a></p>
-</footer>
-
-<script>
-$(document).ready(function(){
-  // Add smooth scrolling to all links in navbar + footer link
-  $(".navbar a, footer a[href='#myPage']").on('click', function(event) {
-    // Make sure this.hash has a value before overriding default behavior
-    if (this.hash !== "") {
-      // Prevent default anchor click behavior
-      event.preventDefault();
-
-      // Store hash
-      var hash = this.hash;
-
-      // Using jQuery's animate() method to add smooth page scroll
-      // The optional number (900) specifies the number of milliseconds it takes to scroll to the specified area
-      $('html, body').animate({
-        scrollTop: $(hash).offset().top
-      }, 900, function(){
-
-        // Add hash (#) to URL when done scrolling (default click behavior)
-        window.location.hash = hash;
-      });
-    } // End if
-  });
-
-  $(window).scroll(function() {
-    $(".slideanim").each(function(){
-      var pos = $(this).offset().top;
-
-      var winTop = $(window).scrollTop();
-        if (pos < winTop + 600) {
-          $(this).addClass("slide");
-        }
-    });
-  });
-})
-</script>
 
 </body>
 </html>
