--- a/index.html
+++ b/index.html
@@ -37,6 +37,10 @@
     background-color:#FFA07A;
 
  }
+
+ #homepage {
+
+ }
   .jumbotron {
       background-color:	#FFA07A;
       color: #fff;
@@ -216,6 +220,7 @@
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav navbar-right">
+        <li><a href=#homepage>Ana Sayfa</a></li>
         <li><a href="#tarih">NEDİR?</a></li>
         <li><a href="#tarif">TARİFİ</a></li>
         <li><a href="#contact1">İLETİŞİM</a></li>
@@ -223,9 +228,10 @@
     </div>
   </div>
 </nav>
-
-<div class="jumbotron text-center">
+<div id="homepage" class="container-fluid">
+ <div class="jumbotron text-center">
   <h1>SİMİT</h1>
+ </div>
 </div>
 
 <!-- Container (About Section) -->
