--- a/index.html
+++ b/index.html
@@ -229,10 +229,13 @@
   </div>
 </nav>
 <div id="homepage" class="container-fluid">
- <div class="jumbotron text-center">
+  <div class="row">
+   <div class="jumbotron text-center">
   <h1>SİMİT</h1>
- </div>
+  </div>
 </div>
+</div>
+
 
 <!-- Container (About Section) -->
 <div id="tarih" class="container-fluid">
