--- a/index.html
+++ b/index.html
@@ -220,10 +220,10 @@
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav navbar-right">
-        <li><a href=#homepage>Ana Sayfa</a></li>
-        <li><a href="#tarih">NEDİR?</a></li>
-        <li><a href="#tarif">TARİFİ</a></li>
-        <li><a href="#contact1">İLETİŞİM</a></li>
+        <li><a href=#homepage>Main Page</a></li>
+        <li><a href="#tarih">What is simit?</a></li>
+        <li><a href="#tarif">Recipe of simit</a></li>
+        <li><a href="#contact1">Contact</a></li>
       </ul>
     </div>
   </div>
@@ -241,7 +241,7 @@
 <div id="tarih" class="container-fluid">
   <div class="row">
     <div class="col-sm-6">
-      <h2><center>Simit Nedir?<center></h2><br>
+      <h2><center>What is simit?<center></h2><br>
       <h4><strong>Simit veya Gevrek, susamla kaplı yuvarlak biçimli ekmeklere verilen genel addır. Türkiye ve Yunanistan'da yaygın olarak tüketilen simide Yunanistan'da kuluri adı verilir. Kültürlere göre değişkenlik gösterse de simitin gevrek olması tercih edilir. İzmir'de simit gevrek adıyla da bilinir.(Bulgaristan'da "gevrek", Sırbistan'da "çevrek" ve Romanya'da da "covrigi" denir. Muhtemelen Balkanlar'dan İzmir'e gelen göçmenlerin etkisiyle simite "gevrek" denmiştir...)</strong><br>
       <p><h4>İstanbul'a gelen ya da İstanbul'dan doğuya giden kervanların konaklama alanı olarak bilinen İzmit'te yolculara pratik bir yiyecek olarak hazırlanan simit, bu özelliği ile de ilk fast food örneklerinden sayılabilir. Kervanlarda yolculuk yapanların atıştırmalık olarak yanlarına aldıkları simitleri, yol boyunca karşılaştıkları kişilere "Simitçi'den" aldıklarını söyledikleri için, bu halka şeklindeki yiyeceğin adı simit olarak kaldı.</h4></p>
       <h2>Ayrıca...</h2><br>
