--- a/index.html
+++ b/index.html
@@ -258,22 +258,22 @@
 <div id="tarif" class="container-fluid">
   <div class="row">
     <div class="col-sm-4">
-      <h2><strong>Tarifi</strong></h2><br>
-      <h4><strong>Malzemeler</strong></h4><br>
+      <h2><strong>Recipe</strong></h2><br>
+      <h4><strong>Ingredients</strong></h4><br>
     <ul>
-      <li>1 su bardağ ılık su</li>
-      <li>1 su bardağı ılık süt</li>
-      <li>1 yemek kaşığı toz şeker</li>
-      <li>1 tatlı kaşığı süt</li>
-      <li>1 adet yumurta</li>
-      <li>1 paket instant maya</li>
-      <li>3,5 - 4 su bardağı un</li>
+      <li>1 glass of warm water</li>
+      <li>1 glass of warm milk</li>
+      <li>1 spoon of granulated sugar</li>
+      <li>1 dessert spoon of milk</li>
+      <li>1 egg</li>
+      <li>1 package of instant yeast</li>
+      <li>3,5 - 4 glass of flour</li>
     </ul>
-      <h4><strong>Üzeri için</strong></h4>
+      <h4><strong>For the over of simit</strong></h4>
     <ul>
-      <li>1/2 çay bardağı su</li>
-      <li>1/2 çay bardağı pekmez</li>
-      <li>1 kase susam</li>
+      <li>1/2 tea cup of water</li>
+      <li>1/2 tea cup of molasses</li>
+      <li>1 bowl of sesame seeds</li>
     </ul>
     </div>
     <div class="col-sm-8">
@@ -288,9 +288,9 @@
      <img src="https://cdn.vox-cdn.com/uploads/chorus_image/image/49650575/Simit_at_Galata_Simitcisi.0.0.jpg" alt="simit" style="width:600px;height:400px;" >
     </div>
     <div class="col-sm-7">
-      <h4><strong>Püf Noktası</strong></h4><br>
+      <h4><strong>Tricks</strong></h4><br>
       <p>Simitlerinizi ne kadar ince rulo haline getirerek sararsanız o kadar çıtır çıtır olacaktır. Susamları hafif kavurmak kokularının ve lezzetlerinin daha çok ortaya çıkmasını sağlayacaktır. Pişirdiğiniz ve fazla gelen simitleri buzdolabı poşetine koyarak buzlukta saklayabilir. Çıkarıp 200 derecelik fırında ısıtarak afiyetle tüketebilirsiniz.</p>
-      <h4><strong>Yapılışı</strong></h4>
+      <h4><strong>How to made?</strong></h4>
     <ol>
       <li>Derin bir kabın içerisine ılık süt, ılık su, maya ve şekeri koyun güzelce karıştırın.</li>
       <li>Ardından içerisine yumurtayı kırın ve karıştırın. Bu karışımın içerisine azar azar un ilave edin.</li>
@@ -307,14 +307,14 @@
 
   <!-- Container (Contact Section) -->
 <div id="contact1" class="container-fluid bg-grey">
-  <h2>İLETİŞİM</h2>
+  <h2>Contact</h2>
   <div class="row">
     <div class="col-sm-5">
-      <p>Simit hakkında sorunlarınız mı var?</p>
-      <p>Aşağıdaki bilgilerden bize ulaştığınız takdirde 24 saat içinde geri dönüş yapacağız.</p>
+      <p>Do you have some questions about simit?</p>
+      <p>You can contact us with this belonging informations.</p>
       <p><span class="glyphicon glyphicon-map-marker"></span> İstanbul, Türkiye </p>
       <p><span class="glyphicon glyphicon-phone"></span> +90 0535-405-6270</p>
-      <p><span class="glyphicon glyphicon-envelope"></span>Founder: sanemunal02@gmail.com / Co-founder: dina_polat62@icloud.com</p>
+      <p><span class="glyphicon glyphicon-envelope"></span>Founder: dina_polat62@icloud.com</p>
     </div>
     <div class="col-sm-7 slideanim">
       <div class="row">
