--- a/index.html
+++ b/index.html
@@ -242,9 +242,11 @@
   <div class="row">
     <div class="col-sm-6">
       <h2><center>What is simit?<center></h2><br>
-      <h4><strong>Simit veya Gevrek, susamla kaplı yuvarlak biçimli ekmeklere verilen genel addır. Türkiye ve Yunanistan'da yaygın olarak tüketilen simide Yunanistan'da kuluri adı verilir. Kültürlere göre değişkenlik gösterse de simitin gevrek olması tercih edilir. İzmir'de simit gevrek adıyla da bilinir.(Bulgaristan'da "gevrek", Sırbistan'da "çevrek" ve Romanya'da da "covrigi" denir. Muhtemelen Balkanlar'dan İzmir'e gelen göçmenlerin etkisiyle simite "gevrek" denmiştir...)</strong><br>
-      <p><h4>İstanbul'a gelen ya da İstanbul'dan doğuya giden kervanların konaklama alanı olarak bilinen İzmit'te yolculara pratik bir yiyecek olarak hazırlanan simit, bu özelliği ile de ilk fast food örneklerinden sayılabilir. Kervanlarda yolculuk yapanların atıştırmalık olarak yanlarına aldıkları simitleri, yol boyunca karşılaştıkları kişilere "Simitçi'den" aldıklarını söyledikleri için, bu halka şeklindeki yiyeceğin adı simit olarak kaldı.</h4></p>
-      <h2>Ayrıca...</h2><br>
+      <h4><strong>Simit is a kind of bread with sesame seeds and circular size. It’s taste, size or other characteristic vary slightly by region. </strong><br>
+      <p><h4>Name of simit is coming from traders. Because simit was common in Anatolia and it taste delicious. Additionally it has an easy recipe to do so it is a kind of fast food. By virtue of this, simit is using as an snake in long roads by traders.</h4></p>
+      <p><h4>It takes other names by regions too. Exemplarily in Greece simit takes the name “kuluri” , in Serbia  “cevrek”,  in Bulgaria “gevrek”, in Romania “covrigi”..etc.</h4></p>
+      <p><h4>Most probably name of gevrek which is using in izmir is coming with the traders who was coming from Balkans.</h4></p>
+      <h2>Furthermore</h2><br>
       <h4>Türk mutfağında sık sık tüketilen dışı susamla kaplı ve çıtır; içi ise türüne göre yumuşak yada sert olabilen bir atıştırmalıktır. Çahvaltılarda çay ve peynirle çok yakışır. Ayrıca başta Kadıköy olmak üzere bir çok yerde seyyar simitçiler de vardır. </h4><br>
     </div>
     <div class="col-sm-6">
@@ -263,8 +265,7 @@
     <ul>
       <li>1 glass of warm water</li>
       <li>1 glass of warm milk</li>
-      <li>1 spoon of granulated sugar</li>
-      <li>1 dessert spoon of milk</li>
+      <li>1 tablespoon of granulated sugar</li>
       <li>1 egg</li>
       <li>1 package of instant yeast</li>
       <li>3,5 - 4 glass of flour</li>
