--- a/index.html
+++ b/index.html
@@ -272,9 +272,8 @@
     </ul>
       <h4><strong>For the over of simit</strong></h4>
     <ul>
-      <li>1/2 tea cup of water</li>
-      <li>1/2 tea cup of molasses</li>
       <li>1 bowl of sesame seeds</li>
+      <li>2 tablespoon molasses mixed with 3 tablespoon water.</li>
     </ul>
     </div>
     <div class="col-sm-8">
@@ -293,14 +292,17 @@
       <p>Simitlerinizi ne kadar ince rulo haline getirerek sararsanız o kadar çıtır çıtır olacaktır. Susamları hafif kavurmak kokularının ve lezzetlerinin daha çok ortaya çıkmasını sağlayacaktır. Pişirdiğiniz ve fazla gelen simitleri buzdolabı poşetine koyarak buzlukta saklayabilir. Çıkarıp 200 derecelik fırında ısıtarak afiyetle tüketebilirsiniz.</p>
       <h4><strong>How to made?</strong></h4>
     <ol>
-      <li>Derin bir kabın içerisine ılık süt, ılık su, maya ve şekeri koyun güzelce karıştırın.</li>
-      <li>Ardından içerisine yumurtayı kırın ve karıştırın. Bu karışımın içerisine azar azar un ilave edin.</li>
-      <li>Tuzu da ekleyerek güzelce yoğurun. Ele yapışmayan yumuşacık bir hamur elde edin.</li>
-      <li>Üzerini streç filmle ya da nemli bir bezle örtün ve oda sıcaklığında 1 saat kadar mayalanmaya bırakın.</li>
-      <li>Mayalandıktan sonra minik bezeler halinde ayırın. Bezelerin her birini rulo şeklinde uzatın ve ikisini birbirine örgü biçimde sarın. Ardından uçlarını birleştirin.</li>
-      <li>Suyla pekmezi karıştırarak açın. Susamları hafif kavurun soğumaya bırakın.</li>
-      <li>Hazırladığınız simitleri önce pekmezli suya ardından susama bulayın ve pişirme kağıdı serili fırın tepsisinin üzerine aktarın.</li>
-      <li>180 derecede ısıtılmış fırında üzerleri kızarana kadar ortalama 25-30 dakika kadar pişirin. Çıkarıp afiyetle tüketin.</li>
+      <li>Initially, put warm water and warm milk into a deep bowl, add sugar and yeast. Then mix them well and keep aside nearly for 3 minutes. </li>
+      <li>Next, add egg and continue stirrring while puting flour slowly.</li>
+      <li>add salt and keep kneading. You will have a nonstick dough after roundly 10 minutes. </li>
+      <li>Cover it with moist towel and leave in warm place to double in size, will take 1 hour or 1 hour and half. </li>
+      <li>When it doubled, you can size it how you want and make them ball. </li>
+      <li>In a small pan roast the sesames.</li>
+      <li>Dust the surface with flour. Using your hand, form a long rope from the sized doughs. Twist both halves of the rope, form it in circle way then press the ends firmly to seal.</li>
+      <li>Immerse the circle doughs into molasses mixture first, then in the sesame seeds. Lay them on a baking sheet.</li>
+      <li>Cover baking sheet and let it rise for 30 minutes again.</li>
+      <li>Preheat oven to 400F, bake the simit for 20 minutes on the middle rack. </li>
+      <li>You can serve simits with jam, honey or cream cheese. :) </li>
     </ol>
   </div>
 </div>
