--- a/index.html
+++ b/index.html
@@ -242,10 +242,14 @@
   <div class="row">
     <div class="col-sm-6">
       <h2><center>What is simit?<center></h2><br>
-      <h4><strong>Simit is a kind of bread with sesame seeds and circular size. It’s taste, size or other characteristic vary slightly by region. </strong><br>
+      <h4><strong>Simit is a kind of bread with sesame seeds and circular size. It’s taste, size or other characteristic vary slightly by region. It is very common in Turkey. </strong><br>
       <p><h4>Name of simit is coming from traders. Because simit was common in Anatolia and it taste delicious. Additionally it has an easy recipe to do so it is a kind of fast food. By virtue of this, simit is using as an snake in long roads by traders.</h4></p>
       <p><h4>It takes other names by regions too. Exemplarily in Greece simit takes the name “kuluri” , in Serbia  “cevrek”,  in Bulgaria “gevrek”, in Romania “covrigi”..etc.</h4></p>
       <p><h4>Most probably name of gevrek which is using in izmir is coming with the traders who was coming from Balkans.</h4></p>
+      <p><h4>Additionaly, according to the archival sourches, the simit has been produced in Istanbul since 1525.</h4></p>
+      <h2>Furthermore</h2>
+      <p><h4>In istanbull or other cities of Turkey, you can find simit on all over the city by licanced resellers who pedal their wares from distinctive white cards. today, the people who can not have royal breakfast in the morning, still buy warm and fresh simits while going to work.</h4></p>
+      <p><h4>In an other hand, simit symbols the lower and middle-classe people of Turkey.(I will not explain it because it is abut economi in Turkey.)</h4></p>
       </div>
     <div class="col-sm-6">
       <img src="simit.jpg" alt="simit" style="width:600px;height:400px" >
