--- a/index.html
+++ b/index.html
@@ -290,8 +290,10 @@
      <img src="https://cdn.vox-cdn.com/uploads/chorus_image/image/49650575/Simit_at_Galata_Simitcisi.0.0.jpg" alt="simit" style="width:600px;height:400px;" >
     </div>
     <div class="col-sm-7">
-      <h4><strong>Tricks</strong></h4><br>
-      <p>Simitlerinizi ne kadar ince rulo haline getirerek sararsanız o kadar çıtır çıtır olacaktır. Susamları hafif kavurmak kokularının ve lezzetlerinin daha çok ortaya çıkmasını sağlayacaktır. Pişirdiğiniz ve fazla gelen simitleri buzdolabı poşetine koyarak buzlukta saklayabilir. Çıkarıp 200 derecelik fırında ısıtarak afiyetle tüketebilirsiniz.</p>
+      <h2><strong>Tricks</strong></h2><br>
+      <p><h4>How much thin you make your circle doughs, they become more cripsy.</h4></p>
+      <p><h4>If you cook more simits than you want, you can hide them in a freezer. Then you can eat them whenever you want by heating them in a microwave or oven.</h4></p>
+      <p><h4>Roasting sesames made simit more delicious and aromatic.</h4></p>
       <h4><strong>How to made?</strong></h4>
     <ol>
       <li>Initially, put warm water and warm milk into a deep bowl, add sugar and yeast. Then mix them well and keep aside nearly for 3 minutes. </li>
