--- a/index.html
+++ b/index.html
@@ -223,6 +223,7 @@
         <li><a href=#homepage>Main Page</a></li>
         <li><a href="#tarih">What is simit?</a></li>
         <li><a href="#tarif">Recipe of simit</a></li>
+        <li><a href="#where">Places</a></li>
         <li><a href="#contact1">Contact</a></li>
       </ul>
     </div>
