--- a/index.html
+++ b/index.html
@@ -313,6 +313,31 @@
 </div>
 </div>
 
+
+
+
+<!-- Container (About Section) -->
+<div id="where" class="container-fluid">
+  <div class="row">
+    <div class="col-sm-4">
+      <h2><strong>From where can i find Turkish bagel?</strong></h2><br>
+      <h4><strong>country</strong></h4><br>
+    <ul>
+      <li>England</li>
+      <li>USA</li>
+      <li>Europa</li>
+      <li>Turkey</li>
+      <li>Asia</li>
+    </ul>
+    </div>
+  </div>
+</div>
+
+
+
+
+
+
   <!-- Container (Contact Section) -->
 <div id="contact1" class="container-fluid bg-grey">
   <h2>Contact</h2>
