--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
     <div class="col-sm-5">
       <p>Do you have some questions about simit?</p>
       <p>You can contact us with this belonging informations.</p>
-      <p><span class="glyphicon glyphicon-map-marker"></span> İstanbul, Türkiye </p>
+      <p><span class="glyphicon glyphicon-map-marker"></span>Kadikoy Anadolu Lisesi, İstanbul, Türkiye </p>
       <p><span class="glyphicon glyphicon-phone"></span> +90 0535-405-6270</p>
       <p><span class="glyphicon glyphicon-envelope"></span>Founder: dina_polat62@icloud.com</p>
     </div>
