--- a/index.html
+++ b/index.html
@@ -330,7 +330,11 @@
       <li>Europa</li>
       <li>Turkey</li>
       <li>Asia</li>
+      <li>..etc.</li>
     </ul>
+
+<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2435.820503689769!2d4.890409815781885!3d52.373674654815495!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c609c71e5a2265%3A0x3f638f1abe64e703!2sSimit+Sarayi!5e0!3m2!1str!2str!4v1558603061898!5m2!1str!2str" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+
     </div>
   </div>
 </div>
