--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
   <div class="row">
     <div class="col-sm-4">
       <h2><strong>From where can i find Turkish bagel?</strong></h2><br>
-      <h4><strong>country</strong></h4><br>
+      <h4><strong>COUNTRIES</strong></h4><br>
     <ul>
       <li>England</li>
       <li>USA</li>
@@ -332,6 +332,8 @@
       <li>Asia</li>
       <li>..etc.</li>
     </ul>
+
+    <p><h2>There are some locations of "Simit Sarayi"(In Amsterdam)(In Turkiye).</h2></p>
 
 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2435.820503689769!2d4.890409815781885!3d52.373674654815495!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c609c71e5a2265%3A0x3f638f1abe64e703!2sSimit+Sarayi!5e0!3m2!1str!2str!4v1558603061898!5m2!1str!2str" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
 
